--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@auth/drizzle-adapter": "^1.7.2",
 		"@hookform/resolvers": "^5.1.1",
+		"@radix-ui/react-alert-dialog": "1.1.6",
 		"@radix-ui/react-avatar": "^1.1.10",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -31,6 +32,7 @@
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-switch": "^1.2.5",
+		"@radix-ui/react-tabs": "^1.1.13",
 		"@radix-ui/react-toggle": "^1.1.9",
 		"@radix-ui/react-toggle-group": "^1.1.10",
 		"@radix-ui/react-tooltip": "^1.2.7",
@@ -43,16 +45,19 @@
 		"axios": "^1.10.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"dayjs": "^1.11.13",
 		"dotenv": "^17.0.1",
 		"drizzle-orm": "^0.41.0",
+		"install": "^0.13.0",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.525.0",
 		"next": "^15.3.5",
 		"next-auth": "5.0.0-beta.25",
 		"next-themes": "^0.4.6",
 		"postgres": "^3.4.4",
+		"radix-ui": "^1.4.3",
 		"react": "^19.1.0",
 		"react-day-picker": "^9.7.0",
 		"react-dom": "^19.1.0",
