--- a/package.json
+++ b/package.json
@@ -1,85 +1,84 @@
 {
-	"name": "ciclo-platform",
-	"version": "0.1.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"build": "next build",
-		"check": "next lint && tsc --noEmit",
-		"dev": "next dev --turbo",
-		"format": "prettier --write . --cache",
-		"lint": "next lint",
-		"lint:fix": "next lint --fix",
-		"preview": "next build && next start",
-		"start": "next start",
-		"typecheck": "tsc --noEmit",
-		"generate-icons": "bun convert-svg-to-components.js"
-	},
-	"dependencies": {
-		"@hookform/resolvers": "^5.1.1",
-		"@radix-ui/react-alert-dialog": "1.1.6",
-		"@radix-ui/react-avatar": "^1.1.10",
-		"@radix-ui/react-dialog": "^1.1.14",
-		"@radix-ui/react-dropdown-menu": "^2.1.15",
-		"@radix-ui/react-label": "^2.1.7",
-		"@radix-ui/react-popover": "^1.1.14",
-		"@radix-ui/react-select": "^2.2.5",
-		"@radix-ui/react-separator": "^1.1.7",
-		"@radix-ui/react-slot": "^1.2.3",
-		"@radix-ui/react-switch": "^1.2.5",
-		"@radix-ui/react-tabs": "^1.1.13",
-		"@radix-ui/react-toggle": "^1.1.9",
-		"@radix-ui/react-toggle-group": "^1.1.10",
-		"@radix-ui/react-tooltip": "^1.2.7",
-		"@t3-oss/env-nextjs": "^0.12.0",
-		"@tanstack/react-query": "^5.69.0",
-		"@tanstack/react-table": "^8.21.3",
-		"@trpc/client": "^11.0.0",
-		"@trpc/react-query": "^11.0.0",
-		"@trpc/server": "^11.0.0",
-		"axios": "^1.10.0",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"cmdk": "^1.1.1",
-		"date-fns": "^4.1.0",
-		"dayjs": "^1.11.13",
-		"dotenv": "^17.0.1",
-		"install": "^0.13.0",
-		"jwt-decode": "^4.0.0",
-		"lucide-react": "^0.525.0",
-		"next": "^15.3.5",
-		"next-auth": "5.0.0-beta.25",
-		"next-themes": "^0.4.6",
-		"radix-ui": "^1.4.3",
-		"react": "^19.1.0",
-		"react-day-picker": "^9.7.0",
-		"react-dom": "^19.1.0",
-		"react-hook-form": "^7.59.0",
-		"server-only": "^0.0.1",
-		"sharp": "^0.34.2",
-		"sonner": "^2.0.6",
-		"superjson": "^2.2.1",
-		"tailwind-merge": "^3.3.1",
-		"zod": "^3.25.67"
-	},
-	"devDependencies": {
-		"@eslint/eslintrc": "^3.3.1",
-		"@tailwindcss/postcss": "^4.0.15",
-		"@types/node": "^20.14.10",
-		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0",
-		"eslint": "^9.23.0",
-		"eslint-config-next": "^15.2.3",
-		"postcss": "^8.5.3",
-		"prettier": "^3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^4.0.15",
-		"tw-animate-css": "^1.3.4",
-		"typescript": "^5.8.2",
-		"typescript-eslint": "^8.27.0"
-	},
-	"ct3aMetadata": {
-		"initVersion": "7.39.3"
-	}
+  "name": "ciclo-platform",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "next build",
+    "check": "next lint && tsc --noEmit",
+    "dev": "next dev --turbo",
+    "format": "prettier --write . --cache",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "preview": "next build && next start",
+    "start": "next start",
+    "typecheck": "tsc --noEmit",
+    "generate-icons": "bun convert-svg-to-components.js"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-alert-dialog": "1.1.6",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-table": "^8.21.3",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/server": "^11.0.0",
+    "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^17.0.1",
+    "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
+    "next": "15.3.6",
+    "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.7.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.59.0",
+    "server-only": "^0.0.1",
+    "sharp": "^0.34.2",
+    "sonner": "^2.0.6",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.67"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.0.15",
+    "@types/node": "^20.14.10",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.3",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.39.3"
+  }
 }
-
